[gd_scene load_steps=6 format=2]

[ext_resource path="res://resources/Fonts/diffusion/ttf/diffusion-lightitalic.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://resources/Scripts/UpgardePawnMenu.gd" type="Script" id=2]
[ext_resource path="res://resources/UiThemes/ButtonTheme.tres" type="StyleBox" id=3]
[ext_resource path="res://resources/UiThemes/ButtonThemeFont.tres" type="DynamicFont" id=4]

[sub_resource type="DynamicFont" id=6]
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[node name="UpgardePawnMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.304688
anchor_top = 0.25
anchor_right = 0.695313
anchor_bottom = 0.75
color = Color( 0, 0, 0, 0.054902 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ReferenceRect" type="ReferenceRect" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
border_color = Color( 0, 0, 0, 0.180392 )
border_width = 2.0
editor_only = false
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ColorRect2" type="ColorRect" parent="."]
anchor_left = 0.304688
anchor_top = 0.25
anchor_right = 0.695313
anchor_bottom = 0.333333
color = Color( 0, 0, 0, 0.180392 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.0
margin_top = -140.0
margin_right = 47.0
margin_bottom = -126.0
custom_fonts/font = SubResource( 6 )
text = "Update pawn : "
__meta__ = {
"_edit_use_anchors_": true
}

[node name="btn_bishop" type="Button" parent="."]
anchor_left = 0.382813
anchor_top = 0.44
anchor_right = 0.462891
anchor_bottom = 0.5
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
text = "Bishop"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="btn_knight" type="Button" parent="."]
anchor_left = 0.382813
anchor_top = 0.6
anchor_right = 0.462891
anchor_bottom = 0.66
margin_bottom = -3.05176e-05
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
text = "Knight"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="btn_queen" type="Button" parent="."]
anchor_left = 0.523438
anchor_top = 0.44
anchor_right = 0.603516
anchor_bottom = 0.5
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
text = "Queen"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="btn_rook" type="Button" parent="."]
anchor_left = 0.523438
anchor_top = 0.6
anchor_right = 0.603516
anchor_bottom = 0.66
margin_bottom = -3.05176e-05
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
text = "Rook"
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="pressed" from="btn_bishop" to="." method="_on_btn_bishop_pressed"]
[connection signal="pressed" from="btn_knight" to="." method="_on_btn_knight_pressed"]
[connection signal="pressed" from="btn_queen" to="." method="_on_btn_queen_pressed"]
[connection signal="pressed" from="btn_rook" to="." method="_on_btn_rook_pressed"]
